# rust-rocket-template

./: Cargo.toml  Procfile  README.md  diesel.toml  sample.env
.github/workflows/: lint.yml  tests.yml
migrations/2020-09-13-180411_create_user/: up.sql
src/: main.rs  schema.rs
src/api/: mod.rs
src/api/endpoints/: mod.rs  users.rs
src/crud/: users.rs
src/db/: guard.rs  mod.rs  pool.rs
src/models/: users.rs
src/schemas/: users.rs
src/tests/: tests.rs
